--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview --port 5050 --strictPort"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "demo-host": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
